# grpcurl-rs

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI_USAGE.md  CONTRIBUTING.md
grpcurl-cli/: Cargo.toml
grpcurl-cli/src/: cli.rs  main.rs  validate.rs
grpcurl-cli/tests/: cli_args.rs  cli_help.rs  cli_validation.rs  proto_export.rs  protoset_describe.rs  protoset_export.rs  protoset_list.rs  server_advanced.rs  server_describe.rs  server_discovery.rs  server_errors.rs  server_metadata.rs  server_streaming.rs  server_unary.rs  server_verbose.rs
grpcurl-cli/tests/common/: mod.rs  server.rs
grpcurl-cli/tests/testdata/: test.pb  test.proto  test_complex.pb  test_complex.proto  test_full.pb  test_full.proto
grpcurl-core/: Cargo.toml
grpcurl-core/src/: codec.rs  connection.rs  descriptor.rs  descriptor_text.rs  error.rs  format.rs  lib.rs  metadata.rs  reflection.rs
grpcurl-core/src/commands/: describe.rs  invoke.rs  list.rs  mod.rs
testing/bankdemo/: Cargo.toml  README.md  build.rs
testing/bankdemo/proto/: bank.proto  support.proto
testing/bankdemo/src/: auth.rs  bank.rs  chat.rs  db.rs  main.rs
testing/testserver/: Cargo.toml  build.rs
testing/testserver/proto/: testserver.proto
testing/testserver/src/: main.rs  service.rs
