[package]
name = "testserver"
version = "0.1.0"
edition = "2021"
description = "Test gRPC server for grpcurl verification"

[[bin]]
name = "testserver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
tonic-reflection = "0.14"
tokio-stream = "0.1"

# Protobuf
prost = "0.14"
prost-types = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"
